{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 317,
  "lineage": "bdd4314c-120d-167d-feed-13d0210cbe97",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:176889214233:internet-gateway/igw-0f8bc193c362f7f01",
            "id": "igw-0f8bc193c362f7f01",
            "owner_id": "176889214233",
            "tags": {
              "Name": "ProjectTwo-IGW"
            },
            "vpc_id": "vpc-04ec8887393a2b9ca"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:176889214233:route-table/rtb-0778dc93f516b45e7",
            "id": "rtb-0778dc93f516b45e7",
            "owner_id": "176889214233",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8bc193c362f7f01",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-04ec8887393a2b9ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw_vpc",
            "module.aws_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnetA_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7f6a9e7dfe83ce0",
            "route_table_id": "rtb-0778dc93f516b45e7",
            "subnet_id": "subnet-03e1bb37f91348f9e"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw_vpc",
            "module.aws_vpc.aws_route_table.rt_vpc",
            "module.aws_vpc.aws_subnet.public_subnetA",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnetB_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00533b223099bd283",
            "route_table_id": "rtb-0778dc93f516b45e7",
            "subnet_id": "subnet-01bf1d7861c8c84f7"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw_vpc",
            "module.aws_vpc.aws_route_table.rt_vpc",
            "module.aws_vpc.aws_subnet.public_subnetB",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:176889214233:subnet/subnet-03e1bb37f91348f9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03e1bb37f91348f9e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "176889214233",
            "vpc_id": "vpc-04ec8887393a2b9ca"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnetB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:176889214233:subnet/subnet-01bf1d7861c8c84f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01bf1d7861c8c84f7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "176889214233",
            "vpc_id": "vpc-04ec8887393a2b9ca"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:176889214233:vpc/vpc-04ec8887393a2b9ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe5f66937a3683f3",
            "default_route_table_id": "rtb-0dc390ec27e4d9af0",
            "default_security_group_id": "sg-00f2fb5df5098ca38",
            "dhcp_options_id": "dopt-891a24e1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04ec8887393a2b9ca",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dc390ec27e4d9af0",
            "owner_id": "176889214233"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instanceProd",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096cb92bb3580c759",
            "arn": "arn:aws:ec2:eu-west-2:176889214233:instance/i-0aaa6e1ddbc1eb45c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aaa6e1ddbc1eb45c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ProjectTwo-KeyV2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-079257a38c23c5428",
            "private_dns": "ip-10-0-1-223.eu-west-2.compute.internal",
            "private_ip": "10.0.1.223",
            "public_ip": "3.8.139.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ba6a3d85edaa456b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e1bb37f91348f9e",
            "tags": {
              "Name": "ProjectTwo-VM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fdb2754bf1ac807c"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.public_subnetA",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.security_group.aws_security_group.ProjectSG"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instanceTest",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096cb92bb3580c759",
            "arn": "arn:aws:ec2:eu-west-2:176889214233:instance/i-02787e45a25b355f7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02787e45a25b355f7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ProjectTwo-KeyV2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-073d2dbd0655dfd21",
            "private_dns": "ip-10-0-2-153.eu-west-2.compute.internal",
            "private_ip": "10.0.2.153",
            "public_ip": "35.178.92.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b67349325c73996a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bf1d7861c8c84f7",
            "tags": {
              "Name": "ProjectTwo-VM"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fdb2754bf1ac807c"
            ]
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.public_subnetB",
            "module.aws_vpc.aws_vpc.main",
            "module.aws_vpc.data.aws_availability_zones.available",
            "module.security_group.aws_security_group.ProjectSG"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ProjectSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:176889214233:security-group/sg-0fdb2754bf1ac807c",
            "description": "Allow SSH connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdb2754bf1ac807c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ProjectTwo-SG",
            "name_prefix": "",
            "owner_id": "176889214233",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04ec8887393a2b9ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}